@@ -15,6 +15,8 @@ v0.1.1
 * Filter X/Y chromosomes during SAM filter step.
 * Keep MAPQ level in SAM filter output.
 * Log the SAM filter step.
+* Optimized pos2cutsite script by calculating distance only from the 2 closest cutsite.
+* Log the UMI preparation step.
 
 v0.1.0
 ===
